--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="TaskMent: Master your tasks, free your mind. The ultimate task management app for boosting productivity and organizing your life."
+    />
+    <meta
+      name="keywords"
+      content="task management, productivity, organization, to-do list, time management"
+    />
+    <link rel="icon" href="/favicon.ico" />
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TaskMent | Your Tasks Management</title>
