added google verification

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta
+      name="google-site-verification"
+      content="dlEdk58nk-ILWnkmK1OCjcZ89zeKbr7TuEIeGrVgVAE"
+    />
+    <meta
       name="description"
       content="TaskMent: Master your tasks, free your mind. The ultimate task management app for boosting productivity and organizing your life."
     />
